Fix animation area when inline settings is appearing.

The animation when inline settings was appearing overlapped with the border outside of it. The border is shown only if the notification is nested.

This CL fixes the animation area.

BUG=809861

Change-Id: I998e9afd294fef6059de1141e7211036877c1401